sfdxsrc/metadataUploader/objects/Countries__mdt/Countries__mdt.object-meta.xml
<CustomObject>
    <label>Countries</label>
    <pluralLabel>Countries</pluralLabel>
</CustomObject>