sfdxsrc/metadataUploader/objects/Countries__mdt/fields/Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Active_Date__c</fullName>
    <label>Active Date</label>
    <type>Date</type>
</CustomField>