sfdxsrc/metadataUploader/objects/Countries__mdt/fields/Active_TIme__c.field-meta.xml
<CustomField>
    <fullName>Active_TIme__c</fullName>
    <label>Active TIme</label>
    <type>DateTime</type>
</CustomField>