sfdxsrc/metadataUploader/objects/Countries__mdt/fields/CountryCode__c.field-meta.xml
<CustomField>
    <fullName>CountryCode__c</fullName>
    <label>Country Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>